# cvewatch

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  main.py  pyproject.toml
.github/workflows/: publish.yml
tests/: test_cli.py
