[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cvewatch"
version = "1.1.0"
description = "Automated CVE monitoring daemon with AI triage and Slack/Discord alerting filtered to your tech stack"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Srinikhil Chakilam", email = "4531201+rawqubit@users.noreply.github.com" }]
keywords = ["security", "cve", "nvd", "vulnerability", "monitoring", "alerting"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: System :: Monitoring",
]
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0",
  "click>=8.0",
  "rich>=13.0",
  "httpx>=0.25",
  "schedule>=1.2",
]

[project.scripts]
cvewatch = "main:cli"

[project.urls]
Homepage = "https://github.com/rawqubit/cvewatch"
Repository = "https://github.com/rawqubit/cvewatch"
"Bug Tracker" = "https://github.com/rawqubit/cvewatch/issues"
